Add section tags to code

--- a/index.html
+++ b/index.html
@@ -53,33 +53,35 @@
   </div>
 
   <main role="main" id="main" class="grid grid-stretch">
-    <div class="unit unit-content-distribute plans xs-1 s-1 m-1-2 l-1-2" id="prices">
-      <h2>Plans</h2>
-      <p>An affordable plan for every budget</p>
-      <p class="content-fill">See why we are number one in the industry</p>
-      <div>
-        <a class="btn btn-big right" href="plans.html">Get Started</a>
+    <section>
+      <div class="unit unit-content-distribute plans xs-1 s-1 m-1-2 l-1-2" id="prices">
+        <h2>Plans</h2>
+        <p>An affordable plan for every budget</p>
+        <p class="content-fill">See why we are number one in the industry</p>
+        <div>
+          <a class="btn btn-big right" href="plans.html">Get Started</a>
+        </div>
       </div>
-    </div>
-    <div class="support unit xs-1 s-1 m-1-2 l-1-2" id="support">
-      <h2>Support</h2>
-      <p>Having trouble connecting to our servers?</p>
-      <p>We are here to help you</p>
-      <p>Try these troubleshooting steps</p>
-      <a class="btn btn-big right" href="support.html">Get Support</a>
-    </div>
-
-    <div class="about unit xs-1 s-1 m-1-2 l-1-2 push-1-2" id="about">
-      <h2>About</h2>
-      <p></p>
-      <a class="btn btn-big right" href="about.html">Learn More</a>
-    </div>
-
-    <div class="contact unit xs-1 s-1 m-1-2 l-1-2 push-1-2" id="contact">
-      <h2>Contact</h2>
-      <p></p>
-      <a class="btn btn-big right" href="contact.html">Call Us Today</a>
-    </div>
+    </section>
+    <section>
+      <div class="support unit xs-1 s-1 m-1-2 l-1-2" id="support">
+        <h2>Support</h2>
+        <p>Having trouble connecting to our servers?</p>
+        <p>We are here to help you</p>
+        <p>Try these troubleshooting steps</p>
+        <a class="btn btn-big right" href="support.html">Get Support</a>
+      </div>
+      <div class="about unit xs-1 s-1 m-1-2 l-1-2 push-1-2" id="about">
+        <h2>About</h2>
+        <p></p>
+        <a class="btn btn-big right" href="about.html">Learn More</a>
+      </div>
+      <div class="contact unit xs-1 s-1 m-1-2 l-1-2 push-1-2" id="contact">
+        <h2>Contact</h2>
+        <p></p>
+        <a class="btn btn-big right" href="contact.html">Call Us Today</a>
+      </div>
+    </section>
   </main>
   <footer role="contentinfo">
     <ul class="list-group-inline grid wrapper text-center pad-t pad-b">
