--- a/pricing.html
+++ b/pricing.html
@@ -34,115 +34,120 @@
   </header>
 
   <main class="background">
-    <div class="grid island">
-      <div class="gutter unit xs-1 s-1 m-1-3 l-1-3">
-        <div class="box-1-2">
-          <p class="gutter pad-b-1-2">Basic</p>
+    <section>
+      <div class="grid island">
+        <div class="gutter unit xs-1 s-1 m-1-3 l-1-3">
+          <div class="box-1-2">
+            <p class="gutter pad-b-1-2">Basic</p>
+          </div>
+          <div class="plans">
+
+            <div class="grid">
+              <div class="unit xs-1 s-1 m-2-3 l-2-3">
+                <img src="" alt="">
+              </div>
+              <div class="unit xs-1 s-1 m-1-3 l-1-3">
+                <svg>
+
+                </svg>
+              </div>
+            </div>
+            <ol class="list-group gutter">
+              <li>Host up to 100 participants</li>
+              <li>Unlimited 1 to 1 meetings</li>
+              <li>45 minute limit on group meetings</li>
+              <li>Unlimited number of meetings</li>
+              <li>Online Support</li>
+              <li>Video Conferencing Features</li>
+              <li>Web Conferencing Features</li>
+              <li>Group Collaboration Features</li>
+              <li>Security</li>
+            </ol>
+            <div class="push text-center">
+              <a class="btn btn-big" href="sign-up.html">Sign Up Now!</a>
+            </div>
+            <div class="box">
+
+            </div>
+          </div>
         </div>
-        <div class="plans">
+      </section>
+      <section>
+        <div class="gutter unit xs-1 s-1 m-1-3 l-1-3">
+          <div class="box-1-2">
+            <p class="gutter pad-b-1-2">Xtra</p>
+          </div>
+          <div class="plans">
 
-          <div class="grid">
-            <div class="unit xs-1 s-1 m-2-3 l-2-3">
-              <img src="" alt="">
+            <div class="grid">
+              <div class="unit xs-1 s-1 m-2-3 l-2-3">
+                <img src="" alt="">
+              </div>
+              <div class="unit xs-1 s-1 m-1-3 l-1-3">
+                <svg>
+
+                </svg>
+              </div>
             </div>
-            <div class="unit xs-1 s-1 m-1-3 l-1-3">
-              <svg>
+            <ol class="list-group gutter">
+              <li>All Basic features</li>
+              <li>Unlimited meeting duration for all meeting sizes</li>
+              <li>User management</li>
+              <li>Admin feature controls</li>
+              <li>Reporting</li>
+              <li>Custom personal meeting ID</li>
+              <li>Assign scheduler</li>
+              <li>Skype for business</li>
+            </ol>
+            <div class="push text-center">
+              <a class="btn btn-big" href="sign-up.html">Sign Up Now!</a>
+            </div>
+            <div class="box">
 
-              </svg>
             </div>
           </div>
-          <ol class="list-group gutter">
-            <li>Host up to 100 participants</li>
-            <li>Unlimited 1 to 1 meetings</li>
-            <li>45 minute limit on group meetings</li>
-            <li>Unlimited number of meetings</li>
-            <li>Online Support</li>
-            <li>Video Conferencing Features</li>
-            <li>Web Conferencing Features</li>
-            <li>Group Collaboration Features</li>
-            <li>Security</li>
-          </ol>
-          <div class="push text-center">
-            <a class="btn btn-big" href="sign-up.html">Sign Up Now!</a>
+        </div>
+      </section>
+      <section>
+        <div class="gutter unit xs-1 s-1 m-1-3 l-1-3">
+          <div class="box-1-2">
+            <p class="gutter pad-b-1-2">Premium</p>
           </div>
-          <div class="box">
+          <div class="plans">
 
+            <div class="grid">
+              <div class="unit xs-1 s-1 m-2-3 l-2-3">
+                <img src="" alt="">
+              </div>
+              <div class="unit xs-1 s-1 m-1-3 l-1-3">
+                <svg>
+
+                </svg>
+              </div>
+            </div>
+            <ol class="list-group gutter">
+              <li>All Xtra features</li>
+              <li>includes 200 participants</li>
+              <li>Dedicated phone support</li>
+              <li>Admin dashboard</li>
+              <li>Managed domains</li>
+              <li>Single sign-on</li>
+              <li>Company branding</li>
+              <li>Custom emails</li>
+              <li>Cloaud recording</li>
+              <li>24/7 support anywhere</li>
+
+            </ol>
+            <div class="push text-center">
+              <a class="btn btn-big" href="sign-up.html">Sign Up Now!</a>
+            </div>
+            <div class="box">
+
+            </div>
           </div>
         </div>
       </div>
-      <div class="gutter unit xs-1 s-1 m-1-3 l-1-3">
-        <div class="box-1-2">
-          <p class="gutter pad-b-1-2">Xtra</p>
-        </div>
-        <div class="plans">
-
-          <div class="grid">
-            <div class="unit xs-1 s-1 m-2-3 l-2-3">
-              <img src="" alt="">
-            </div>
-            <div class="unit xs-1 s-1 m-1-3 l-1-3">
-              <svg>
-
-              </svg>
-            </div>
-          </div>
-          <ol class="list-group gutter">
-            <li>All Basic features</li>
-            <li>Unlimited meeting duration for all meeting sizes</li>
-            <li>User management</li>
-            <li>Admin feature controls</li>
-            <li>Reporting</li>
-            <li>Custom personal meeting ID</li>
-            <li>Assign scheduler</li>
-            <li>Skype for business</li>
-          </ol>
-          <div class="push text-center">
-            <a class="btn btn-big" href="sign-up.html">Sign Up Now!</a>
-          </div>
-          <div class="box">
-
-          </div>
-        </div>
-      </div>
-      <div class="gutter unit xs-1 s-1 m-1-3 l-1-3">
-        <div class="box-1-2">
-          <p class="gutter pad-b-1-2">Premium</p>
-        </div>
-        <div class="plans">
-
-          <div class="grid">
-            <div class="unit xs-1 s-1 m-2-3 l-2-3">
-              <img src="" alt="">
-            </div>
-            <div class="unit xs-1 s-1 m-1-3 l-1-3">
-              <svg>
-
-              </svg>
-            </div>
-          </div>
-          <ol class="list-group gutter">
-            <li>All Xtra features</li>
-            <li>includes 200 participants</li>
-            <li>Dedicated phone support</li>
-            <li>Admin dashboard</li>
-            <li>Managed domains</li>
-            <li>Single sign-on</li>
-            <li>Company branding</li>
-            <li>Custom emails</li>
-            <li>Cloaud recording</li>
-            <li>24/7 support anywhere</li>
-
-          </ol>
-          <div class="push text-center">
-            <a class="btn btn-big" href="sign-up.html">Sign Up Now!</a>
-          </div>
-          <div class="box">
-
-          </div>
-        </div>
-      </div>
-
-    </div>
+    </section>
   </main>
   <footer role="contentinfo">
     <ul class="list-group-inline grid wrapper text-center pad-t pad-b">
