--- a/support.html
+++ b/support.html
@@ -12,102 +12,106 @@
 </head>
 <body>
 
-<ul>
-  <li><a href="#main"></a></li>
-  <li><a href="#nav"></a></li>
-</ul>
-<header class="masthead" role="banner">
-  <div class="wrapper pad-t-1-2 pad-b-1-2 gutter-1-2">
-    <h1 class="company-name push-0">Around the World Conferencing</h1>
-  </div>
+  <ul>
+    <li><a href="#main"></a></li>
+    <li><a href="#nav"></a></li>
+  </ul>
+  <header class="masthead" role="banner">
+    <div class="wrapper pad-t-1-2 pad-b-1-2 gutter-1-2">
+      <h1 class="company-name push-0">Around the World Conferencing</h1>
+    </div>
 
-  <div class="nav" tabindex="0">
-    <nav class="wrapper gutter-1-2" id="nav" tabindex="0" role="navigation">
-      <ol class="mega list-group-inline push-0">
-        <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="index.html">Home</a></li>
-        <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="pricing.html">Plans</a></li>
-        <li><a id="current" class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="support.html">Support</a></li>
-        <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="tour.html">About</a></li>
-        <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="contact.html">Contact</a></li>
-      </ol>
-    </nav>
-  </div>
-</header>
+    <div class="nav" tabindex="0">
+      <nav class="wrapper gutter-1-2" id="nav" tabindex="0" role="navigation">
+        <ol class="mega list-group-inline push-0">
+          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="index.html">Home</a></li>
+          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="pricing.html">Plans</a></li>
+          <li><a id="current" class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="support.html">Support</a></li>
+          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="tour.html">About</a></li>
+          <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2 btn" href="contact.html">Contact</a></li>
+        </ol>
+      </nav>
+    </div>
+  </header>
 
 
   <main class="background">
-    <div class="grid text-center island">
-      <div class="gutter unit xs-1 s-1 m-1-2 l-1-2">
-        <div class="box-1-2">
-          <p class="gutter pad-b-1-2">Basic</p>
+    <section>
+      <div class="grid text-center island">
+        <div class="gutter unit xs-1 s-1 m-1-2 l-1-2">
+          <div class="box-1-2">
+            <p class="gutter pad-b-1-2">Basic</p>
+          </div>
+          <div class="plans">
+
+
+
+            <img src="" alt="">
+
+
+
+            <ol class="list-group gutter-2 text-left">
+              <li>Host up to 100 participants</li>
+              <li>Unlimited 1 to 1 meetings</li>
+              <li>45 minute limit on group meetings</li>
+              <li>Unlimited number of meetings</li>
+              <li>Online Support</li>
+              <li>Video Conferencing Features</li>
+              <li>Web Conferencing Features</li>
+              <li>Group Collaboration Features</li>
+              <li>Security</li>
+            </ol>
+
+            <div class="box">
+
+            </div>
+          </div>
         </div>
-        <div class="plans">
+      </section>
+      <section>
+        <div class="gutter unit xs-1 s-1 m-1-2 l-1-2">
+          <div class="box-1-2">
+            <p class="gutter pad-b-1-2">Basic</p>
+          </div>
+          <div class="plans">
 
 
 
-          <img src="" alt="">
+            <img src="" alt="">
 
 
 
-          <ol class="list-group gutter-2 text-left">
-            <li>Host up to 100 participants</li>
-            <li>Unlimited 1 to 1 meetings</li>
-            <li>45 minute limit on group meetings</li>
-            <li>Unlimited number of meetings</li>
-            <li>Online Support</li>
-            <li>Video Conferencing Features</li>
-            <li>Web Conferencing Features</li>
-            <li>Group Collaboration Features</li>
-            <li>Security</li>
-          </ol>
+            <ol class="list-group gutter">
+              <li>Host up to 100 participants</li>
+              <li>Unlimited 1 to 1 meetings</li>
+              <li>45 minute limit on group meetings</li>
+              <li>Unlimited number of meetings</li>
+              <li>Online Support</li>
+              <li>Video Conferencing Features</li>
+              <li>Web Conferencing Features</li>
+              <li>Group Collaboration Features</li>
+              <li>Security</li>
+            </ol>
 
-          <div class="box">
+            <div class="box">
 
+            </div>
           </div>
         </div>
       </div>
-      <div class="gutter unit xs-1 s-1 m-1-2 l-1-2">
-        <div class="box-1-2">
-          <p class="gutter pad-b-1-2">Basic</p>
-        </div>
-        <div class="plans">
-
-
-
-          <img src="" alt="">
-
-
-
-          <ol class="list-group gutter">
-            <li>Host up to 100 participants</li>
-            <li>Unlimited 1 to 1 meetings</li>
-            <li>45 minute limit on group meetings</li>
-            <li>Unlimited number of meetings</li>
-            <li>Online Support</li>
-            <li>Video Conferencing Features</li>
-            <li>Web Conferencing Features</li>
-            <li>Group Collaboration Features</li>
-            <li>Security</li>
-          </ol>
-
-          <div class="box">
-
-          </div>
-        </div>
-      </div>
-    </div>
-</main>
-<footer role="contentinfo">
-  <ul class="list-group-inline grid wrapper text-center pad-t pad-b">
-    <li class="unit xs-1 s-1 m-1-2 l-1-2">Privacy Policy</li>
-    <li class="unit xs-1 s-1 m-1-2 l-1-2">FAQ</li>
-    <li class="unit xs-1 s-1 m-1-2 l-1-2">Terms</li>
-    <li class="unit xs-1 s-1 m-1-2 l-1-2">About</li>
-    <li class="unit xs-1 s-1 m-1-2 l-1-2">Facebook</li>
-    <li class="unit xs-1 s-1 m-1-2 l-1-2">Instagram</li>
-    <li class="unit xs-1 s-1 m-1-2 l-1-2">Snapchat</li>
-    <li class="unit xs-1 s-1 m-1-2 l-1-2">Pinterest</li>
-  </ul>
-</footer>
+    </section>
+  </main>
+  <footer role="contentinfo">
+    <ul class="list-group-inline grid wrapper text-center pad-t pad-b">
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">Privacy Policy</li>
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">FAQ</li>
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">Terms</li>
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">About</li>
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">Facebook</li>
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">Instagram</li>
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">Snapchat</li>
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">Pinterest</li>
+    </ul>
+  </footer>
 </body>
 </html>
