--- a/tour.html
+++ b/tour.html
@@ -12,9 +12,9 @@
 </head>
 <body>
 
-  <ul>
-    <li><a href="#main"></a></li>
-    <li><a href="#nav"></a></li>
+  <ul class="skip-links">
+    <li><a href="#main">Jump to main content</a></li>
+    <li><a href="#nav">Jump to navigation</a></li>
   </ul>
   <header class="masthead" role="banner">
     <div class="wrapper pad-t-1-2 pad-b-1-2 gutter-1-2">
@@ -34,7 +34,8 @@
     </div>
   </header>
   <main class="background">
-    <div class="wrapper island">
+    <section>
+      <div class="wrapper island">
 
 
         <div class="box-1-2">
@@ -63,19 +64,20 @@
 
           </div>
         </div>
-        </div>
-    </main>
-    <footer role="contentinfo">
-      <ul class="list-group-inline grid wrapper text-center pad-t pad-b">
-        <li class="unit xs-1 s-1 m-1-2 l-1-2">Privacy Policy</li>
-        <li class="unit xs-1 s-1 m-1-2 l-1-2">FAQ</li>
-        <li class="unit xs-1 s-1 m-1-2 l-1-2">Terms</li>
-        <li class="unit xs-1 s-1 m-1-2 l-1-2">About</li>
-        <li class="unit xs-1 s-1 m-1-2 l-1-2">Facebook</li>
-        <li class="unit xs-1 s-1 m-1-2 l-1-2">Instagram</li>
-        <li class="unit xs-1 s-1 m-1-2 l-1-2">Snapchat</li>
-        <li class="unit xs-1 s-1 m-1-2 l-1-2">Pinterest</li>
-      </ul>
-    </footer>
+      </div>
+    </section>
+  </main>
+  <footer role="contentinfo">
+    <ul class="list-group-inline grid wrapper text-center pad-t pad-b">
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">Privacy Policy</li>
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">FAQ</li>
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">Terms</li>
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">About</li>
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">Facebook</li>
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">Instagram</li>
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">Snapchat</li>
+      <li class="unit xs-1 s-1 m-1-2 l-1-2">Pinterest</li>
+    </ul>
+  </footer>
 </body>
 </html>
