--- a/tour.html
+++ b/tour.html
@@ -38,7 +38,7 @@
       <div class="wrapper island">
 
         <div class="box-1-2">
-          <p class="gutter pad-b-1-2">About Us</p>
+          <p class="about-us gutter pad-b-1-2">About Us</p>
         </div>
         <div class="plans">
 
