--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
   </header>
 
   <div class="grid">
-
-    <div class="banner embed embed-16by9 unit xs-1 s-1 m-1-2">
-      <img class="embed-item img-flex" src="images/placeholder-16by9.svg" alt="">
+    <div class="unit xs-1 s-1 m-1-2">
+    <div class="banner embed embed-16by9">
+      <img class="embed-item" src="images/homebannerimage.jpg" alt="">
     </div>
-
+  </div>
     <div class="banner-content pad-t-2 gutter-1-2 unit xs-1 s-1 m-1-2 l-1-2">
       <h2>Get Support Anywhere!</h2>
       <p class="push-2">An affordable plan for every budget</p>
