Add tabindex to matching ID

--- a/sign-up.html
+++ b/sign-up.html
@@ -33,7 +33,7 @@
       </nav>
     </div>
   </header>
-  <main role="main" id="main">
+  <main role="main" id="main" tabindex="0">
 
     <section class="contact max-length gutter pad-t-2 pad-b-2">
       <div>
