--- a/support.html
+++ b/support.html
@@ -42,9 +42,9 @@
           <p class="gutter pad-b-1-2">Basic</p>
         </div>
         <div class="plans">
-
-          <img src="" alt="">
-
+          <div class="support embed embed-1by1">
+            <img class="embed-item" src="images/supportimage.jpg" alt="">
+          </div>
           <ol class="list-group gutter-2 text-left">
             <li>Host up to 100 participants</li>
             <li>Unlimited 1 to 1 meetings</li>
@@ -62,14 +62,14 @@
           </div>
         </div>
       </div>
-      <div class="gutter unit xs-1 s-1 m-1-2 l-1-2">>
+      <div class="gutter unit xs-1 s-1 m-1-2 l-1-2">
         <div class="box-1-2">
           <p class="gutter pad-b-1-2">Basic</p>
         </div>
         <div class="plans">
-
-          <img src="" alt="">
-
+          <div class="support embed embed-1by1">
+            <img class="embed-item" src="images/supportimage.jpg" alt="">
+          </div>
           <ol class="list-group gutter">
             <li>Host up to 100 participants</li>
             <li>Unlimited 1 to 1 meetings</li>
