--- a/tour.html
+++ b/tour.html
@@ -45,7 +45,7 @@
           <div class="grid">
 
             <div class="banner unit xs-1 s-1 m-1-2">
-              <img class="img-flex" src="images/placeholder-16by9.svg" alt="">
+              <img class="img-flex" src="images/placeholder-16by9.svg" alt="aria-details">
             </div>
 
             <div class="banner-content pad-t-2 gutter-1-2 unit xs-1 s-1 m-1-2 l-1-2">
