--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 
   <div class="grid">
     <div class="unit xs-1 s-1 m-1-2">
-    <div class="banner embed embed-16by9">
-      <img class="embed-item" src="images/homebannerimage.jpg" alt="">
+      <div class="banner embed embed-16by9">
+        <img class="embed-item" src="images/homebannerimage.jpg" alt="aria-details">
+      </div>
     </div>
-  </div>
     <div class="banner-content pad-t-2 gutter-1-2 unit xs-1 s-1 m-1-2 l-1-2">
       <h2>Get Support Anywhere!</h2>
       <p class="push-2">An affordable plan for every budget</p>
@@ -52,7 +52,7 @@
 
   </div>
 
-  <main role="main" id="main" class="grid grid-stretch">
+  <main role="main" id="main" class="grid grid-stretch" tabindex="0">
     <section class="unit unit-content-distribute plans xs-1 s-1 m-1-2 l-1-2" id="prices">
       <div>
         <h2>Plans</h2>
