--- a/pricing.html
+++ b/pricing.html
@@ -35,17 +35,55 @@
 
   <main class="background">
     <div class="grid island">
-    <section  class="gutter unit xs-1 s-1 m-1-3 l-1-3">
-      <div>
+      <section  class="gutter unit xs-1 s-1 m-1-3 l-1-3">
+        <div>
+          <div>
+            <div class="box-1-2">
+              <p class="gutter pad-b-1-2">Basic</p>
+            </div>
+            <div class="plans">
+
+              <div class="grid">
+                <div class="pricing embed embed-1by1 unit xs-1 s-1 m-2-3 l-2-3">
+                  <img class="embed-item" src="images/pricingimage.jpg" alt="">
+                </div>
+                <div class="unit xs-1 s-1 m-1-3 l-1-3">
+                  <svg>
+
+                  </svg>
+                </div>
+              </div>
+              <ol class="list-group gutter">
+                <li>Host up to 100 participants</li>
+                <li>Unlimited 1 to 1 meetings</li>
+                <li>45 minute limit on group meetings</li>
+                <li>Unlimited number of meetings</li>
+                <li>Online Support</li>
+                <li>Video Conferencing Features</li>
+                <li>Web Conferencing Features</li>
+                <li>Group Collaboration Features</li>
+                <li>Security</li>
+              </ol>
+              <div class="push text-center">
+                <a class="btn btn-big" href="sign-up.html">Sign Up Now!</a>
+              </div>
+              <div class="box">
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="gutter unit xs-1 s-1 m-1-3 l-1-3">
         <div>
           <div class="box-1-2">
-            <p class="gutter pad-b-1-2">Basic</p>
+            <p class="gutter pad-b-1-2">Xtra</p>
           </div>
           <div class="plans">
 
             <div class="grid">
-              <div class="unit xs-1 s-1 m-2-3 l-2-3">
-                <img src="" alt="">
+              <div class="pricing embed embed-1by1 unit xs-1 s-1 m-2-3 l-2-3">
+                <img class="embed-item" src="images/pricingimage.jpg" alt="">
               </div>
               <div class="unit xs-1 s-1 m-1-3 l-1-3">
                 <svg>
@@ -54,15 +92,14 @@
               </div>
             </div>
             <ol class="list-group gutter">
-              <li>Host up to 100 participants</li>
-              <li>Unlimited 1 to 1 meetings</li>
-              <li>45 minute limit on group meetings</li>
-              <li>Unlimited number of meetings</li>
-              <li>Online Support</li>
-              <li>Video Conferencing Features</li>
-              <li>Web Conferencing Features</li>
-              <li>Group Collaboration Features</li>
-              <li>Security</li>
+              <li>All Basic features</li>
+              <li>Unlimited meeting duration for all meeting sizes</li>
+              <li>User management</li>
+              <li>Admin feature controls</li>
+              <li>Reporting</li>
+              <li>Custom personal meeting ID</li>
+              <li>Assign scheduler</li>
+              <li>Skype for business</li>
             </ol>
             <div class="push text-center">
               <a class="btn btn-big" href="sign-up.html">Sign Up Now!</a>
@@ -72,95 +109,58 @@
             </div>
           </div>
         </div>
-      </div>
-    </section>
-    <section class="gutter unit xs-1 s-1 m-1-3 l-1-3">
-      <div>
-        <div class="box-1-2">
-          <p class="gutter pad-b-1-2">Xtra</p>
-        </div>
-        <div class="plans">
-
-          <div class="grid">
-            <div class="unit xs-1 s-1 m-2-3 l-2-3">
-              <img src="" alt="">
-            </div>
-            <div class="unit xs-1 s-1 m-1-3 l-1-3">
-              <svg>
-
-              </svg>
-            </div>
+      </section>
+      <section class="gutter unit xs-1 s-1 m-1-3 l-1-3">
+        <div>
+          <div class="box-1-2">
+            <p class="gutter pad-b-1-2">Premium</p>
           </div>
-          <ol class="list-group gutter">
-            <li>All Basic features</li>
-            <li>Unlimited meeting duration for all meeting sizes</li>
-            <li>User management</li>
-            <li>Admin feature controls</li>
-            <li>Reporting</li>
-            <li>Custom personal meeting ID</li>
-            <li>Assign scheduler</li>
-            <li>Skype for business</li>
-          </ol>
-          <div class="push text-center">
-            <a class="btn btn-big" href="sign-up.html">Sign Up Now!</a>
-          </div>
-          <div class="box">
+          <div class="plans">
 
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="gutter unit xs-1 s-1 m-1-3 l-1-3">
-      <div>
-        <div class="box-1-2">
-          <p class="gutter pad-b-1-2">Premium</p>
-        </div>
-        <div class="plans">
+            <div class="grid">
+              <div class="pricing embed embed-1by1 unit xs-1 s-1 m-2-3 l-2-3">
+                <img class="embed-item" src="images/pricingimage.jpg" alt="">
+              </div>
+              <div class="unit xs-1 s-1 m-1-3 l-1-3">
+                <svg>
 
-          <div class="grid">
-            <div class="unit xs-1 s-1 m-2-3 l-2-3">
-              <img src="" alt="">
+                </svg>
+              </div>
             </div>
-            <div class="unit xs-1 s-1 m-1-3 l-1-3">
-              <svg>
+            <ol class="list-group gutter">
+              <li>All Xtra features</li>
+              <li>includes 200 participants</li>
+              <li>Dedicated phone support</li>
+              <li>Admin dashboard</li>
+              <li>Managed domains</li>
+              <li>Single sign-on</li>
+              <li>Company branding</li>
+              <li>Custom emails</li>
+              <li>Cloaud recording</li>
+              <li>24/7 support anywhere</li>
 
-              </svg>
+            </ol>
+            <div class="push text-center">
+              <a class="btn btn-big" href="sign-up.html">Sign Up Now!</a>
+            </div>
+            <div class="box">
+
             </div>
           </div>
-          <ol class="list-group gutter">
-            <li>All Xtra features</li>
-            <li>includes 200 participants</li>
-            <li>Dedicated phone support</li>
-            <li>Admin dashboard</li>
-            <li>Managed domains</li>
-            <li>Single sign-on</li>
-            <li>Company branding</li>
-            <li>Custom emails</li>
-            <li>Cloaud recording</li>
-            <li>24/7 support anywhere</li>
-
-          </ol>
-          <div class="push text-center">
-            <a class="btn btn-big" href="sign-up.html">Sign Up Now!</a>
-          </div>
-          <div class="box">
-
-          </div>
         </div>
-      </div>
-    </section>
-  </main>
-  <footer role="contentinfo">
-    <ul class="list-group-inline grid wrapper text-center pad-t pad-b">
-      <li class="unit xs-1 s-1 m-1-2 l-1-2">Privacy Policy</li>
-      <li class="unit xs-1 s-1 m-1-2 l-1-2">FAQ</li>
-      <li class="unit xs-1 s-1 m-1-2 l-1-2">Terms</li>
-      <li class="unit xs-1 s-1 m-1-2 l-1-2">About</li>
-      <li class="unit xs-1 s-1 m-1-2 l-1-2">Facebook</li>
-      <li class="unit xs-1 s-1 m-1-2 l-1-2">Instagram</li>
-      <li class="unit xs-1 s-1 m-1-2 l-1-2">Snapchat</li>
-      <li class="unit xs-1 s-1 m-1-2 l-1-2">Pinterest</li>
-    </ul>
-  </footer>
-</body>
-</html>
+      </section>
+    </main>
+    <footer role="contentinfo">
+      <ul class="list-group-inline grid wrapper text-center pad-t pad-b">
+        <li class="unit xs-1 s-1 m-1-2 l-1-2">Privacy Policy</li>
+        <li class="unit xs-1 s-1 m-1-2 l-1-2">FAQ</li>
+        <li class="unit xs-1 s-1 m-1-2 l-1-2">Terms</li>
+        <li class="unit xs-1 s-1 m-1-2 l-1-2">About</li>
+        <li class="unit xs-1 s-1 m-1-2 l-1-2">Facebook</li>
+        <li class="unit xs-1 s-1 m-1-2 l-1-2">Instagram</li>
+        <li class="unit xs-1 s-1 m-1-2 l-1-2">Snapchat</li>
+        <li class="unit xs-1 s-1 m-1-2 l-1-2">Pinterest</li>
+      </ul>
+    </footer>
+  </body>
+  </html>
