embed image to sign up page

--- a/sign-up.html
+++ b/sign-up.html
@@ -34,6 +34,9 @@
     </div>
   </header>
   <main role="main" id="main" tabindex="0">
+    <div class="support embed embed-1by1">
+      <img class="embed-item" src="images/signupimage.jpg" alt="">
+    </div>
 
     <section class="contact max-length gutter pad-t-2 pad-b-2">
       <div>
