Add aria-details to the image tag

--- a/sign-up.html
+++ b/sign-up.html
@@ -35,7 +35,7 @@
   </header>
   <main role="main" id="main" tabindex="0">
     <div class="support embed embed-1by1">
-      <img class="embed-item" src="images/signupimage.jpg" alt="">
+      <img class="embed-item" src="images/signupimage.jpg" alt="aria-details">
     </div>
 
     <section class="contact max-length gutter pad-t-2 pad-b-2">
